added new entitiy attributeValue
